@@ -33,22 +33,11 @@
 case "${1}" in
    start)
       log_info_msg "Remounting root file system in read-write mode..."
-      mount -n -o remount,rw / >/dev/null
+      mount -o remount,rw / >/dev/null
       evaluate_retval
 
       # Remove fsck-related file system watermarks.
       rm -f /fastboot /forcefsck
-
-      log_info_msg "Recording existing mounts in /etc/mtab..."
-      > /etc/mtab
-
-      mount -f /     || failed=1
-      mount -f /proc || failed=1
-      mount -f /sys  || failed=1
-      mount -f /run  || failed=1
-      mount -f /dev  || failed=1
-      (exit ${failed})
-      evaluate_retval
 
       # This will mount all filesystems that do not have _netdev in
       # their option list.  _netdev denotes a network filesystem.
@@ -60,13 +49,13 @@ case "${1}" in
       ;;
 
    stop)
-      # Don't unmount tmpfs like /run
+      # Don't unmount virtual file systems like /run
       log_info_msg "Unmounting all other currently mounted file systems..."
-      umount -a -d -r -t notmpfs,nosysfs,nodevtmpfs,noproc >/dev/null
+      umount -a -d -r -t notmpfs,nosysfs,nodevtmpfs,noproc,nodevpts >/dev/null
       evaluate_retval
 
-      # Make sure / is mounted read only (umount bug?)
-      mount -n -o remount,ro /
+      # Make sure / is mounted read only (umount bug)
+      mount -o remount,ro /
 
       # Make all LVM volume groups unavailable, if appropriate
       # This fails if swap or / are on an LVM partition
