@@ -1,3 +1,7 @@
+2013-05-15 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Remove unneeded options and commands from mountfs and
+     mountvirtfs when mtab is a symlink to /proc/self/mounts
+
 2013-05-11 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Make sure the root fs is mounted read only in mountfs
      before halting
